--- a/Therapists.ipynb
+++ b/Therapists.ipynb
@@ -206,6 +206,7 @@
    },
    "outputs": [],
    "source": [
+    "# note: there may be popups appearing during execution since your browser might try to open an app that is connected to \"mailto:\" links\n",
     "start_url = f\"https://www.therapie.de/therapeutensuche/ergebnisse/?ort={post_code}&page={start_page}&therapieangebot={therapy_form}&verfahren={therapy_type}\"\n",
     "\n",
     "\n",
@@ -232,7 +233,7 @@
     "    fieldnames = therapist_data[0].keys()\n",
     "\n",
     "    with open(csv_file, 'w', newline='', encoding='utf-8') as csvfile:\n",
-    "        writer = csv.DictWriter(csvfile, fieldnames=fieldnames, delimiter=';')\n",
+    "        writer = csv.DictWriter(csvfile, fieldnames=fieldnames, delimiter=',')\n",
     "\n",
     "        # Write the header row\n",
     "        writer.writeheader()\n",
@@ -257,186 +258,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b75d9cc7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>website</th>\n",
-       "      <th>email</th>\n",
-       "      <th>therapist_type</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Elisabeth Schreiber</td>\n",
-       "      <td>http://www.psychotherapieschreiber.de</td>\n",
-       "      <td>kontakt@psychotherapieschreiber.de</td>\n",
-       "      <td>Psychologische Psychotherapeutin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Danjal Akrami</td>\n",
-       "      <td>http://www.praxis-akrami.de</td>\n",
-       "      <td>Kontakt@praxis-akrami.de</td>\n",
-       "      <td>Psychologischer Psychotherapeut</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Martin Daume</td>\n",
-       "      <td>http://www.mdaume.de</td>\n",
-       "      <td>mdaume@me.com</td>\n",
-       "      <td>Psychologischer Psychotherapeut / Klinischer O...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Vicki Bauer-Bertsch</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>info@psychotherapie-vbauer.de</td>\n",
-       "      <td>Psychologische Psychotherapeutin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Cynthia Quiroga Murcia</td>\n",
-       "      <td>https://www.psychotherapie-quiroga.de</td>\n",
-       "      <td>frankfurt@praxis-quiroga.de</td>\n",
-       "      <td>Psychologische Psychotherapeutin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>251</th>\n",
-       "      <td>Tanja Müller</td>\n",
-       "      <td>http://www.durchatmen.jetzt</td>\n",
-       "      <td>info@durchatmen.jetzt</td>\n",
-       "      <td>durchatmen - Praxis für Psychotherapie &amp; Coaching</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>252</th>\n",
-       "      <td>Laura Dold</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>kontakt@psychotherapie-dold.de</td>\n",
-       "      <td>Psychologische Psychotherapeutin, Verhaltensth...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>253</th>\n",
-       "      <td>Alice Galle</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>anfragen@galle-psychotherapie.de</td>\n",
-       "      <td>Psychologische Psychotherapeutin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>254</th>\n",
-       "      <td>Corinna Stünckel</td>\n",
-       "      <td>http://www.psychotherapie-in-ffm-unterliederba...</td>\n",
-       "      <td>PsychotherapieStuenckel@gmx.de</td>\n",
-       "      <td>Psychologische Psychotherapeutin Verhaltensthe...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>256</th>\n",
-       "      <td>Anja Bienek</td>\n",
-       "      <td>http://www.praxis-bienek.de</td>\n",
-       "      <td>Praxis.Bienek@web.de</td>\n",
-       "      <td>Psychologische Psychotherapeutin</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>177 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       name  \\\n",
-       "1       Elisabeth Schreiber   \n",
-       "3             Danjal Akrami   \n",
-       "4              Martin Daume   \n",
-       "6       Vicki Bauer-Bertsch   \n",
-       "8    Cynthia Quiroga Murcia   \n",
-       "..                      ...   \n",
-       "251            Tanja Müller   \n",
-       "252              Laura Dold   \n",
-       "253             Alice Galle   \n",
-       "254        Corinna Stünckel   \n",
-       "256             Anja Bienek   \n",
-       "\n",
-       "                                               website  \\\n",
-       "1                http://www.psychotherapieschreiber.de   \n",
-       "3                          http://www.praxis-akrami.de   \n",
-       "4                                 http://www.mdaume.de   \n",
-       "6                                                  NaN   \n",
-       "8                https://www.psychotherapie-quiroga.de   \n",
-       "..                                                 ...   \n",
-       "251                        http://www.durchatmen.jetzt   \n",
-       "252                                                NaN   \n",
-       "253                                                NaN   \n",
-       "254  http://www.psychotherapie-in-ffm-unterliederba...   \n",
-       "256                        http://www.praxis-bienek.de   \n",
-       "\n",
-       "                                  email  \\\n",
-       "1    kontakt@psychotherapieschreiber.de   \n",
-       "3              Kontakt@praxis-akrami.de   \n",
-       "4                         mdaume@me.com   \n",
-       "6         info@psychotherapie-vbauer.de   \n",
-       "8           frankfurt@praxis-quiroga.de   \n",
-       "..                                  ...   \n",
-       "251               info@durchatmen.jetzt   \n",
-       "252      kontakt@psychotherapie-dold.de   \n",
-       "253    anfragen@galle-psychotherapie.de   \n",
-       "254      PsychotherapieStuenckel@gmx.de   \n",
-       "256                Praxis.Bienek@web.de   \n",
-       "\n",
-       "                                        therapist_type  \n",
-       "1                     Psychologische Psychotherapeutin  \n",
-       "3                      Psychologischer Psychotherapeut  \n",
-       "4    Psychologischer Psychotherapeut / Klinischer O...  \n",
-       "6                     Psychologische Psychotherapeutin  \n",
-       "8                     Psychologische Psychotherapeutin  \n",
-       "..                                                 ...  \n",
-       "251  durchatmen - Praxis für Psychotherapie & Coaching  \n",
-       "252  Psychologische Psychotherapeutin, Verhaltensth...  \n",
-       "253                   Psychologische Psychotherapeutin  \n",
-       "254  Psychologische Psychotherapeutin Verhaltensthe...  \n",
-       "256                   Psychologische Psychotherapeutin  \n",
-       "\n",
-       "[177 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import exported data\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('therapists.csv', delimiter=';')\n",
+    "df = pd.read_csv('therapists.csv', delimiter=',')\n",
     "\n",
     "# filter data\n",
     "filtered_df = df[~df['therapist_type'].str.contains('Heil|Kinder|Privat', case=False, na=False)] \n",
@@ -458,6 +288,7 @@
     "Important notes:\n",
     "\n",
     "You need to use an \"App Password\" instead of your regular Gmail password. \n",
+    "Create an app password here: https://myaccount.google.com/apppasswords\n",
     "This requires enabling 2-Step Verification in your Google Account settings.\n",
     "\"\"\"\n",
     "import smtplib\n",
@@ -474,36 +305,48 @@
    "source": [
     "# replace all values\n",
     "sender_email = \"\" \n",
-    "sender_password = \"\"\n",
-    "subject = \"Anfrage Erstgespräch\"\n",
+    "sender_app_password = \"\"\n",
+    "subject = \"Erstgespräch Anfrage\"\n",
     "\n",
+    "# fill in the text that should be sent to the therapists\n",
     "body = f\"\"\"\n",
+    "Sehr geehrte Damen und Herren,\n",
+    "\n",
+    "Ich möchte ein Erstgespräch bei Ihnen anfragen.\n",
+    "\n",
+    "Lorem Ipsum (here, enter some relevant info)\n",
+    "\n",
+    "Ich danke Ihnen im Voraus. Ansonsten wäre ich über eine schriftliche Absage sehr dankbar, sodass ich einen Nachweis für die Krankenkasse habe.\n",
+    "\n",
+    "Mit freundlichen Grüßen \n",
+    "Max Mustermann\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "3a63789f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Removed mails: 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "emails = set(filtered_df[\"email\"].tolist())\n",
-    "# Add emails here that should not be contacted in case they appear in the dataset\n",
+    "# Add emails here that should not be contacted in case they appear in the dataset. \n",
+    "# can either be done manually with this list or via a csv import. \n",
+    "# If CSV import should not be used for filtering, comment it out.\n",
+    "# If running this script for the first time, no need to do anything here.\n",
     "emails_already_contacted = [\n",
     "]\n",
     "\n",
+    "#emails_already_contacted_df = pd.read_csv('contacted_therapists.csv', delimiter=',')\n",
+    "emails_already_contacted = set(emails_already_contacted_df[\"email\"].tolist())\n",
+    "\n",
+    "\n",
     "emails_filtered = [mail for mail in emails if mail not in emails_already_contacted]\n",
     "\n",
-    "print(\"Removed mails: \" + str(len(emails)-len(emails_filtered)))"
+    "print(\"Removed mails: \" + str(len(emails)-len(emails_filtered)))\n",
+    "print(\"Total mails: \" + str(len(emails_filtered)))\n",
+    "emails_filtered"
    ]
   },
   {
@@ -514,7 +357,7 @@
    "outputs": [],
    "source": [
     "with smtplib.SMTP_SSL('smtp.gmail.com', 465) as server:\n",
-    "    server.login(sender_email, sender_password)\n",
+    "    server.login(sender_email, sender_app_password)\n",
     "    for email in emails_filtered:\n",
     "        recipient_email = email\n",
     "        message = MIMEText(body, _charset=\"utf-8\")\n",
@@ -523,8 +366,7 @@
     "        message['To'] = recipient_email\n",
     "        print(email)\n",
     "        print(message)\n",
-    "        server.sendmail(sender_email, recipient_email, message.as_string())\n",
-    "    \n"
+    "        server.sendmail(sender_email, recipient_email, message.as_string())\n"
    ]
   },
   {
